# balance_robot

ProjectFiles/: CMakeLists.txt  i2cInterface.c  i2cInterface.h  led.c  led.h  logInterface.c  logInterface.h  main.c  mpu6050.c  mpu6050.h  pinout.h  rtosUtility.c  rtosUtility.h  tester.c  tester.h
ProjectFiles/examples/: example_isr.c
balance_robot/: README.md
freertos/: FreeRTOSConfig.h
